WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/ABA__c.field-meta.xml
<CustomField>
    <fullName>ABA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ABA #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>