WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/ACH__c.field-meta.xml
<CustomField>
    <fullName>ACH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACH</label>
    <type>Checkbox</type>
</CustomField>