WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Authorized_Contact_City__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Contact_City__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__BillingCity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorized Contact City</label>
    <type>Text</type>
</CustomField>