WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Authorized_Contact_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Contact_Mailing_Address__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__BillingStreet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorized Contact Mailing Address</label>
    <type>Text</type>
</CustomField>