WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Authorized_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Contact_Phone__c</fullName>
    <formula>SBQQ__Quote__r.Authorized_Contact_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorized Contact Phone</label>
    <type>Text</type>
</CustomField>