WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Authorized_Contact_State__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Contact_State__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__BillingState__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorized Contact State</label>
    <type>Text</type>
</CustomField>