WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Authorized_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Contact_Title__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__PrimaryContact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorized Contact Title</label>
    <type>Text</type>
</CustomField>