WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Authorized_Contact_Zip__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Contact_Zip__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__BillingPostalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorized Contact Zip</label>
    <type>Text</type>
</CustomField>