WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Banking_Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>Banking_Institution_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Banking Institution Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>