WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <formula>SBQQ__Quote__r.Billing_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Contact</label>
    <type>Text</type>
</CustomField>