WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Billing_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Address__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__BillingStreet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Contact Address</label>
    <type>Text</type>
</CustomField>