WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Billing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cycle__c</fullName>
    <formula>Text( SBQQ__Quote__r.Billing_Cycle__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Cycle</label>
    <type>Text</type>
</CustomField>