WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Checking_Acct__c.field-meta.xml
<CustomField>
    <fullName>Checking_Acct__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Checking Acct #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>