WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__BillingCity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>