WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Confirm_ABA__c.field-meta.xml
<CustomField>
    <fullName>Confirm_ABA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirm ABA</label>
    <length>15</length>
    <type>Text</type>
</CustomField>