WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Credit_Line_Requested__c.field-meta.xml
<CustomField>
    <fullName>Credit_Line_Requested__c</fullName>
    <formula>SBQQ__Quote__r.Requested_Credit_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Line Requested</label>
    <type>Text</type>
</CustomField>