WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Description_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Business__c</fullName>
    <label>Description of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Proprietorship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>