WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Dun_Bradstreet__c.field-meta.xml
<CustomField>
    <fullName>Dun_Bradstreet__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dun &amp; Bradstreet No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>