WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Financial_Statement__c.field-meta.xml
<CustomField>
    <fullName>Financial_Statement__c</fullName>
    <label>Financial Statement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>