WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Financial_Statement_No__c.field-meta.xml
<CustomField>
    <fullName>Financial_Statement_No__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Statement No</label>
    <type>Checkbox</type>
</CustomField>