WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Financial_Statement_Yes__c.field-meta.xml
<CustomField>
    <fullName>Financial_Statement_Yes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Statement Yes</label>
    <type>Checkbox</type>
</CustomField>