WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Incorporation_Date__c.field-meta.xml
<CustomField>
    <fullName>Incorporation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Incorporation Date</label>
    <length>200</length>
    <type>Text</type>
</CustomField>