WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Initial_Credit_Line_Requested__c.field-meta.xml
<CustomField>
    <fullName>Initial_Credit_Line_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Credit Line Requested</label>
    <type>Checkbox</type>
</CustomField>