WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/InternetPay__c.field-meta.xml
<CustomField>
    <fullName>InternetPay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InternetPay</label>
    <type>Checkbox</type>
</CustomField>