WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Legal_Name_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name_of_Business__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__BillingName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Name of Business</label>
    <type>Text</type>
</CustomField>