WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/MCFFDOTno__c.field-meta.xml
<CustomField>
    <fullName>MCFFDOTno__c</fullName>
    <formula>SBQQ__Quote__r.MCFFDOTno__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MCFFDOTno</label>
    <type>Text</type>
</CustomField>