WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/no_of_18_Wheelers__c.field-meta.xml
<CustomField>
    <fullName>no_of_18_Wheelers__c</fullName>
    <formula>SBQQ__Quote__r.Number_of_18_Wheelers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of 18 Wheelers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>