WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/no_of_Trailers__c.field-meta.xml
<CustomField>
    <fullName>no_of_Trailers__c</fullName>
    <formula>SBQQ__Quote__r.no_of_trailers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Trailers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>