WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Online_Application__c.field-meta.xml
<CustomField>
    <fullName>Online_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Online Application</label>
    <referenceTo>OnlineApplication__c</referenceTo>
    <relationshipLabel>Quote Documents</relationshipLabel>
    <relationshipName>Quote_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>