WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Opportunity_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Lookup</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Quote Documents (Opportunity Lookup)</relationshipLabel>
    <relationshipName>Quote_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>