WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company__c</fullName>
    <formula>SBQQ__Quote__r.Parent_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Company</label>
    <type>Text</type>
</CustomField>