WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Partnership__c.field-meta.xml
<CustomField>
    <fullName>Partnership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partnership</label>
    <type>Checkbox</type>
</CustomField>