WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paper Check/Third Party Checks ($25.00 fee) *requires credit approval</fullName>
            </value>
            <value>
                <fullName>DirectDebitACHFREE</fullName>
            </value>
            <value>
                <fullName>ACHCustomerInitiatedFree</fullName>
            </value>
            <value>
                <fullName>WirePaymentsfeeperwireunder</fullName>
            </value>
            <value>
                <fullName>WesternUnionQuickPerPayment</fullName>
            </value>
            <value>
                <fullName>OnlinePaymentFree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>