WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>SBQQ__Quote__r.Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone No</label>
    <type>Text</type>
</CustomField>