WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address__c</fullName>
    <formula>SBQQ__Quote__r.Physical_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical Address</label>
    <type>Text</type>
</CustomField>