WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Physical_City__c.field-meta.xml
<CustomField>
    <fullName>Physical_City__c</fullName>
    <formula>SBQQ__Quote__r.Physical_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical City</label>
    <type>Text</type>
</CustomField>