WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Physical_State__c.field-meta.xml
<CustomField>
    <fullName>Physical_State__c</fullName>
    <formula>SBQQ__Quote__r.Physical_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical State</label>
    <type>Text</type>
</CustomField>