WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Physical_Zip__c.field-meta.xml
<CustomField>
    <fullName>Physical_Zip__c</fullName>
    <formula>SBQQ__Quote__r.Physical_Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical Zip</label>
    <type>Text</type>
</CustomField>