WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Prepay_min500__c.field-meta.xml
<CustomField>
    <fullName>Prepay_min500__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-pay (min$500)</label>
    <type>Checkbox</type>
</CustomField>