WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <formula>TEXT(SBQQ__Quote__r.Product_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>