WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <formula>SBQQ__Quote__r.Program_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Name</label>
    <type>Text</type>
</CustomField>