WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Requested_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Requested_Credit_Limit__c</fullName>
    <formula>SBQQ__Quote__r.Requested_Credit_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Credit Limit</label>
    <type>Text</type>
</CustomField>