WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Trade_Name_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Trade_Name_of_Business__c</fullName>
    <formula>SBQQ__Quote__r.Trade_Name_of_Business__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade Name of Business</label>
    <type>Text</type>
</CustomField>