WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Western_Union__c.field-meta.xml
<CustomField>
    <fullName>Western_Union__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Western Union</label>
    <type>Checkbox</type>
</CustomField>