WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteDocument__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__BillingPostalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip</label>
    <type>Text</type>
</CustomField>